--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.1.1",
+    "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
+    "popper.js": "^1.16.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
